<resources>
    <string name="app_name">ZRahman_Remote_Control</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_tv">My TV</string>
    <string name="tv_power">TV Power: </string>
    <string name="tv_power_status">On</string>
    <string name="speaker_volume">Speaker Volume: </string>
    <string name="speaker_volume_number">50</string>
    <string name="current_channel">Current Channel: </string>
    <string name="current_channel_number">87</string>
    <string name="my_remote_control">My Remote Control</string>
    <string name="power">Power</string>
    <string name="lbl_volume">Volume</string>
    <string name="lbl_channel">Channel</string>
    <string name="lbl_fav_channel">Favorite\nChannel</string>
    <string name="title_activity_zr_activity_dvr">ZR_activity_dvr</string>
    <string name="title_activity_zrconfirguration">ZRConfirgurationActivity</string>
    <string name="my_dvr">My DVR</string>
    <string name="dvr_power">DVR Power: </string>
    <string name="dvr_power_status">On</string>
    <string name="lbl_state">State:</string>
    <string name="state_status">Fast Forward</string>
    <string name="rd_btn_conf_left">Left</string>
    <string name="rd_btn_conf_center">Center</string>
    <string name="rd_btn_conf_right">Right</string>
    <string name="config_channel">0</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_zero">0</string>
    <string name="btn_channel_plus">CH+</string>
    <string name="btn_channel_minus">CH-</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="swch_dvr">SWITCH TO DVR</string>
    <string name="swch_config">CONFIGURE</string>

</resources>
