<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.depaul.csc472.zrahman_remote_control.ZRConfirgurationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="Configure Favorite Channels"
        android:textColor="@color/configure_fav_channel"
        android:textStyle="bold"
        android:gravity="center" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Favorite\nChannel\nButton"
                android:layout_weight="1"
                android:paddingEnd="5dp"/>

            <RadioGroup
                android:id="@+id/rdobtn_channel_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="10dp">

                <RadioButton
                    android:id="@+id/rdnbtn_favLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rd_btn_conf_left"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/rdnbtn_favMiddle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rd_btn_conf_center"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/rdnbtn_favRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rd_btn_conf_right"
                    android:layout_weight="1" />

            </RadioGroup>

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/edtTxt_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Label"/>

        <EditText
            android:id="@+id/channel_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Channel" />

        <TextView
            android:id="@+id/config_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/config_channel"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <TableRow>

            <Button
                android:id="@+id/btn_one"
                android:layout_column="2"
                android:text="@string/btn_one"/>

            <Button
                android:id="@+id/btn_two"
                android:layout_column="3"
                android:text="@string/btn_two"/>

            <Button
                android:id="@+id/btn_three"
                android:layout_column="4"
                android:text="@string/btn_three"/>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_four"
                android:layout_column="2"
                android:text="@string/btn_four"/>

            <Button
                android:id="@+id/btn_five"
                android:layout_column="3"
                android:text="@string/btn_five"/>

            <Button
                android:id="@+id/btn_six"
                android:layout_column="4"
                android:text="@string/btn_six"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_seven"
                android:layout_column="2"
                android:text="@string/btn_seven"/>

            <Button
                android:id="@+id/btn_eight"
                android:layout_column="3"
                android:text="@string/btn_eight"/>

            <Button
                android:id="@+id/btn_nine"
                android:layout_column="4"
                android:text="@string/btn_nine"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_zero"
                android:layout_column="2"
                android:text="@string/btn_zero"/>

            <Button
                android:id="@+id/btn_channel_plus"
                android:layout_column="3"
                android:text="@string/btn_channel_plus"/>

            <Button
                android:id="@+id/btn_channel_minus"
                android:layout_column="4"
                android:text="@string/btn_channel_minus"/>

        </TableRow>

        <TableRow>

            <Space />

            <Button
                android:id="@+id/btn_save"
                android:layout_column="3"
                android:text="@string/btn_save"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_column="4"
                android:text="@string/btn_cancel"/>

        </TableRow>

    </TableLayout>

</LinearLayout>
